# discord-news-letter

./: .gitignore  LICENSE  README.md  flow_.py  main.py  pyproject.toml
noticias/: armazenamento.py  bot.py  cog.py  config.py  modelos.py  publicador.py  scraper.py
